--- a/CustomTableView/CustomTableView/TableViewCell/TableViewCell.xib
+++ b/CustomTableView/CustomTableView/TableViewCell/TableViewCell.xib
@@ -6,45 +6,43 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TableViewCell" customModule="CustomTableView" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h4e-t0-oKb">
-                    <rect key="frame" x="0.0" y="240" width="187.5" height="187.5"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="h4e-t0-oKb" secondAttribute="height" id="16j-DW-r1c"/>
-                    </constraints>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W6p-Rd-4WS">
-                    <rect key="frame" x="333" y="323" width="42" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-            </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="W6p-Rd-4WS" secondAttribute="trailing" id="5Gl-VE-kFR"/>
-                <constraint firstItem="h4e-t0-oKb" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.5" id="bxB-BP-Fyh"/>
-                <constraint firstItem="W6p-Rd-4WS" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="jD6-98-kfq"/>
-                <constraint firstItem="h4e-t0-oKb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="pwm-hZ-G9g"/>
-                <constraint firstItem="h4e-t0-oKb" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="t1P-E7-HHf"/>
-            </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="141" id="zmg-Yj-KAB" userLabel="Table View Cell" customClass="TableViewCell" customModule="CustomTableView" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="392" height="141"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zmg-Yj-KAB" id="bPX-XP-quc">
+                <rect key="frame" x="0.0" y="0.0" width="392" height="140.5"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pWU-iw-GLP">
+                        <rect key="frame" x="0.0" y="0.0" width="392" height="140"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nip-mu-Azg">
+                        <rect key="frame" x="0.0" y="109.5" width="392" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="Nip-mu-Azg" secondAttribute="bottom" constant="10" id="D4w-CV-XpL"/>
+                    <constraint firstItem="Nip-mu-Azg" firstAttribute="leading" secondItem="bPX-XP-quc" secondAttribute="leading" id="Dhf-eB-DZH"/>
+                    <constraint firstItem="pWU-iw-GLP" firstAttribute="top" secondItem="bPX-XP-quc" secondAttribute="top" id="LoK-cg-24w"/>
+                    <constraint firstItem="pWU-iw-GLP" firstAttribute="leading" secondItem="bPX-XP-quc" secondAttribute="leading" id="XTv-7W-cpf"/>
+                    <constraint firstAttribute="bottom" secondItem="pWU-iw-GLP" secondAttribute="bottom" id="Xyo-R4-fT8"/>
+                    <constraint firstAttribute="trailing" secondItem="Nip-mu-Azg" secondAttribute="trailing" id="bwB-nt-Jbu"/>
+                    <constraint firstAttribute="trailing" secondItem="pWU-iw-GLP" secondAttribute="trailing" id="puI-Eq-WQw"/>
+                </constraints>
+            </tableViewCellContentView>
             <connections>
-                <outlet property="cellImage" destination="h4e-t0-oKb" id="sDX-hS-xyn"/>
-                <outlet property="cellLabel" destination="W6p-Rd-4WS" id="Zld-Up-Jyx"/>
+                <outlet property="cellImage" destination="pWU-iw-GLP" id="nhS-LO-2Dl"/>
+                <outlet property="cellLabel" destination="Nip-mu-Azg" id="F0E-tk-k9Z"/>
             </connections>
-            <point key="canvasLocation" x="33.5" y="53.5"/>
-        </view>
+            <point key="canvasLocation" x="41" y="568.5"/>
+        </tableViewCell>
     </objects>
 </document>
